# dict/api/user/types.ts
@@ -1,80 +1,0 @@
-/* eslint-disable */
-// tslint:disable
-/**
- * MICRO SERVICES CURD OPERATIONS
- * 
- *
- * OpenAPI spec version: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator+.
- * https://github.com/karlvr/openapi-generator-plus
- * Do not edit the class manually.
- */
-
-import { Express } from 'express'
-import { Api } from '../../models'
-
-export interface UserApi {
-	userCreate: (request: Api.BODYDATA | undefined) => Promise<UserCreateResponse>
-	deleteUser: (email: string) => Promise<DeleteUserResponse>
-	getUser: () => Promise<GetUserResponse>
-	updateUser: (email: string, request: Api.BODYDATA | undefined) => Promise<UpdateUserResponse>
-}
-
-export type UserCreateResponse = UserCreate201Response | UserCreate400Response
-
-export interface UserCreate201Response {
-	status: 201
-	body: Api.ApiResponse
-	headers?: never
-}
-
-export interface UserCreate400Response {
-	status: 400
-	body: Api.ApiResponse
-	headers?: never
-}
-
-export type DeleteUserResponse = DeleteUser201Response | DeleteUser400Response
-
-export interface DeleteUser201Response {
-	status: 201
-	body: Api.ApiResponse
-	headers?: never
-}
-
-export interface DeleteUser400Response {
-	status: 400
-	body: Api.ApiResponse
-	headers?: never
-}
-
-export type GetUserResponse = GetUser201Response | GetUser400Response
-
-export interface GetUser201Response {
-	status: 201
-	body: Api.BODYDATA[]
-	headers?: never
-}
-
-export interface GetUser400Response {
-	status: 400
-	body: Api.ApiResponse
-	headers?: never
-}
-
-export type UpdateUserResponse = UpdateUser201Response | UpdateUser400Response
-
-export interface UpdateUser201Response {
-	status: 201
-	body: Api.ApiResponse
-	headers?: never
-}
-
-export interface UpdateUser400Response {
-	status: 400
-	body: Api.ApiResponse
-	headers?: never
-}
-
